Update integration tests for connect and bad client